fix styling on iphone

--- a/ui/src/components/layout.css
+++ b/ui/src/components/layout.css
@@ -42,10 +42,13 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  color: #FF4454;
+  transition: color 0.2s ease-in-out;
 }
 a:active,
 a:hover {
   outline-width: 0;
+  color: #F4A33F;
 }
 abbr[title] {
   border-bottom: none;
@@ -455,14 +458,10 @@ form {
   margin-bottom: 1.45rem;
 }
 noscript {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin: 50px;
+  text-align: center;
+  display: block;
+  font-weight: bold;
 }
 iframe {
   margin-left: 0;
@@ -624,6 +623,7 @@ pre tt:after {
 
 body {
   background-color: #6F3CD1;
-  background: linear-gradient(45deg, #6F3CD1, #6F3CD1 50%, #5429A9);
+  background-image: linear-gradient(45deg, #6F3CD1, #6F3CD1 50%, #5429A9);
   background-attachment: fixed;
 }
+
